Git-2-Tfs Sync. 1506044 Merged PR 10376: Fixed page and grid scrollbar; branch: master ***NO_CI***
git-tfs-id: [https://dev.azure.com/inatech]$/Shiptech10/Dev/Frontend;C30237

--- a/v2/shiptech/assets/theme/common/designsystem-v2-theme/v2-component.scss
+++ b/v2/shiptech/assets/theme/common/designsystem-v2-theme/v2-component.scss
@@ -32,10 +32,10 @@
         font-size: 18px;
       }
     }
-    &::-webkit-scrollbar {
-      height: 4px;
-      width: 4px;
-    }
+    // &::-webkit-scrollbar {
+    //   height: 4px;
+    //   width: 4px;
+    // }
 
     ul {
       list-style-type: none;
@@ -2090,11 +2090,11 @@ div.component-viewer-nav-content
 
 /* Scrollbar */
  
-::-webkit-scrollbar {
-  width: 10px;
-  height: 10px;
-  background-color: transparent;
-}
+// ::-webkit-scrollbar {
+//   width: 10px;
+//   height: 10px;
+//   background-color: transparent;
+// }
  
 ::-webkit-scrollbar-track {
   border-radius: 10px;
